# contract-whist

./: README.md  pyproject.toml
contract_whist/: cards.py  deck.py  game.py  hand.py  player.py  trick.py
contract_whist/data/: data_gen.py  vector.py  whist_net.py
contract_whist/players/: __init__.py  data_player.py  heuristic_player.py  human_player.py  nn_player.py  player.py  random_player.py
