[tool.poetry]
name = "contract-whist"
version = "0.1.0"
description = ""
authors = ["Fred Cook <fred@fredcook.co.uk>"]
readme = "README.md"
packages = [{include = "contract_whist"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
