[tool.poetry]
name = "contract-whist"
version = "0.1.0"
description = ""
authors = ["Fred Cook <fred@fredcook.co.uk>"]
readme = "README.md"
packages = [{include = "contract_whist"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
numpy = "^2.1.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
